[gd_scene load_steps=28 format=3 uid="uid://bhuijr3vn2yru"]

[ext_resource type="Script" path="res://src/Actors/Player.gd" id="1_0lbm8"]
[ext_resource type="Texture2D" uid="uid://fkmcasopwjol" path="res://assets/textures/shroomguy idle spritesheet.png" id="2_qadvj"]
[ext_resource type="Shape2D" uid="uid://dy8m1n82bsbh0" path="res://resources/shroomguy_standing_cshape.tres" id="3_06muq"]
[ext_resource type="Texture2D" uid="uid://c275pc73bbo63" path="res://assets/textures/shroomguy crouch idle spritesheet.png" id="4_pvx3n"]
[ext_resource type="Texture2D" uid="uid://bdious5drjboj" path="res://assets/textures/shroomguy crouch walk spritesheet.png" id="5_gj30b"]
[ext_resource type="Texture2D" uid="uid://bodcdctps5jj0" path="res://assets/textures/shroomguy dash roll spritesheet.png" id="6_y6mq6"]
[ext_resource type="Texture2D" uid="uid://b6klf8h1kpqxx" path="res://assets/textures/shroomguy fall spritesheet.png" id="7_g3f5u"]
[ext_resource type="Texture2D" uid="uid://byybtlpelskn6" path="res://assets/textures/shroomguy jump spritesheet.png" id="8_h834w"]
[ext_resource type="Texture2D" uid="uid://bxsodf0vvgv8m" path="res://assets/shroomguy run spritesheet.png" id="9_1yyeh"]
[ext_resource type="Texture2D" uid="uid://cs2vk6qcuc3eo" path="res://assets/textures/shroomguy walk spritesheet.png" id="10_lu4ix"]
[ext_resource type="Script" path="res://src/Actors/TEST.gd" id="11_2tf64"]
[ext_resource type="Texture2D" uid="uid://cefx4lmtmnl76" path="res://assets/shroomguy walk0000.png" id="12_gnrqr"]
[ext_resource type="Texture2D" uid="uid://cqkgaxexbu6u4" path="res://assets/taust parallax katsetus v1.png" id="13_ejf4r"]
[ext_resource type="PackedScene" uid="uid://dpc00c71oax0e" path="res://scenes/text_edit.tscn" id="14_pbcka"]

[sub_resource type="Animation" id="Animation_qib5r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_qadvj")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_22lt3"]
resource_name = "crouch_idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_pvx3n")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_e7ucd"]
resource_name = "crouch_walk"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_gj30b")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 0, 11, 12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_g786x"]
resource_name = "dash_roll"
length = 0.3
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_y6mq6")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.025, 0.05, 0.075, 0.1, 0.125, 0.15, 0.175, 0.2, 0.225, 0.25, 0.275, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 5, 6, 7, 8, 9, 3, 10, 4, 11, 1, 12, 2]
}

[sub_resource type="Animation" id="Animation_vy2r7"]
resource_name = "fall"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_g3f5u")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_bwvlh"]
resource_name = "idle"
length = 1.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_qadvj")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_xa05n"]
resource_name = "jump"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_h834w")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_vs0gq"]
resource_name = "run"
length = 1.05
loop_mode = 1
step = 0.075
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("9_1yyeh")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45, 0.525, 0.6, 0.675, 0.75, 0.825, 0.9, 0.975),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}

[sub_resource type="Animation" id="Animation_objuw"]
resource_name = "walk"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("10_lu4ix")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 2, 3, 4, 5, 6, 7, 8, 9, 10, 1, 11, 12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ilspw"]
_data = {
"RESET": SubResource("Animation_qib5r"),
"crouch_idle": SubResource("Animation_22lt3"),
"crouch_walk": SubResource("Animation_e7ucd"),
"dash_roll": SubResource("Animation_g786x"),
"fall": SubResource("Animation_vy2r7"),
"idle": SubResource("Animation_bwvlh"),
"jump": SubResource("Animation_xa05n"),
"run": SubResource("Animation_vs0gq"),
"walk": SubResource("Animation_objuw")
}

[sub_resource type="QuadMesh" id="QuadMesh_d0keg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xef3y"]
size = Vector2(1162, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_67eqp"]
size = Vector2(42, 54)

[node name="World" type="Node2D"]

[node name="Player" type="CharacterBody2D" parent="."]
z_index = 1
position = Vector2(576, 518)
script = ExtResource("1_0lbm8")
gravity = 30
jump_force = 600
dash_speed = 1000

[node name="Sprite2D" type="Sprite2D" parent="Player"]
position = Vector2(1, -50.5)
scale = Vector2(0.0545, 0.0545)
texture = ExtResource("2_qadvj")
hframes = 16
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(2, -36)
shape = ExtResource("3_06muq")

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(2, -105)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
root_node = NodePath("../Sprite2D")
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_ilspw")
}

[node name="CrouchRaycast_1" type="RayCast2D" parent="Player"]
position = Vector2(-30, -6)
target_position = Vector2(0, -65)

[node name="CrouchRaycast_2" type="RayCast2D" parent="Player"]
position = Vector2(34, -6)
target_position = Vector2(0, -65)

[node name="dash_timer" type="Timer" parent="Player"]
wait_time = 0.3

[node name="dash_again_timer" type="Timer" parent="Player"]

[node name="Ground" type="StaticBody2D" parent="."]

[node name="MeshInstance2D" type="MeshInstance2D" parent="Ground"]
modulate = Color(0.0117647, 0.227451, 0.392157, 1)
position = Vector2(576, 605)
scale = Vector2(1162, 100)
mesh = SubResource("QuadMesh_d0keg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(576, 605)
shape = SubResource("RectangleShape2D_xef3y")

[node name="Ground2" type="StaticBody2D" parent="."]
position = Vector2(1204, -76)

[node name="MeshInstance2D" type="MeshInstance2D" parent="Ground2"]
modulate = Color(0.14902, 0, 0.588235, 1)
position = Vector2(576, 605)
scale = Vector2(1162, 100)
mesh = SubResource("QuadMesh_d0keg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground2"]
position = Vector2(576, 605)
shape = SubResource("RectangleShape2D_xef3y")

[node name="Ground3" type="StaticBody2D" parent="."]
position = Vector2(1371, -229)

[node name="MeshInstance2D" type="MeshInstance2D" parent="Ground3"]
modulate = Color(0.133333, 0, 0.533333, 1)
position = Vector2(576, 605)
scale = Vector2(1162, 100)
mesh = SubResource("QuadMesh_d0keg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground3"]
position = Vector2(576, 605)
shape = SubResource("RectangleShape2D_xef3y")

[node name="Ground4" type="StaticBody2D" parent="."]
position = Vector2(2305, 22)

[node name="MeshInstance2D" type="MeshInstance2D" parent="Ground4"]
modulate = Color(0.223529, 0.027451, 0.568627, 1)
position = Vector2(576, 605)
scale = Vector2(1162, 100)
mesh = SubResource("QuadMesh_d0keg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground4"]
position = Vector2(576, 605)
shape = SubResource("RectangleShape2D_xef3y")

[node name="Ground5" type="StaticBody2D" parent="."]
position = Vector2(2625, -76)

[node name="MeshInstance2D" type="MeshInstance2D" parent="Ground5"]
modulate = Color(0.247059, 0, 0.901961, 1)
position = Vector2(576, 605)
scale = Vector2(1162, 100)
mesh = SubResource("QuadMesh_d0keg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground5"]
position = Vector2(576, 605)
shape = SubResource("RectangleShape2D_xef3y")

[node name="Ground6" type="StaticBody2D" parent="."]
position = Vector2(2670, -176)

[node name="MeshInstance2D" type="MeshInstance2D" parent="Ground6"]
modulate = Color(0.0235294, 0.211765, 0.490196, 1)
position = Vector2(576, 605)
scale = Vector2(1162, 100)
mesh = SubResource("QuadMesh_d0keg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground6"]
position = Vector2(576, 605)
shape = SubResource("RectangleShape2D_xef3y")

[node name="Ground7" type="StaticBody2D" parent="."]
position = Vector2(1327, -391)

[node name="MeshInstance2D" type="MeshInstance2D" parent="Ground7"]
modulate = Color(0.168627, 0, 0.65098, 1)
position = Vector2(576, 605)
scale = Vector2(1162, 20)
mesh = SubResource("QuadMesh_d0keg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground7"]
position = Vector2(576, 605)
scale = Vector2(1, 0.2)
shape = SubResource("RectangleShape2D_xef3y")

[node name="TEST" type="CharacterBody2D" parent="."]
position = Vector2(-5, 10)
script = ExtResource("11_2tf64")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TEST"]
position = Vector2(291, 501)
shape = SubResource("RectangleShape2D_67eqp")

[node name="ShroomguyWalk0000" type="Sprite2D" parent="TEST"]
position = Vector2(291, 491)
scale = Vector2(0.04, 0.04)
texture = ExtResource("12_gnrqr")

[node name="TaustParallaxKatsetusV1" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(1780, 275)
scale = Vector2(1.50414, 1.50414)
texture = ExtResource("13_ejf4r")

[node name="TextEdit" parent="." instance=ExtResource("14_pbcka")]

[connection signal="timeout" from="Player/dash_timer" to="Player" method="_on_dash_timer_timeout"]
[connection signal="timeout" from="Player/dash_again_timer" to="Player" method="_on_dash_again_timer_timeout"]
